Major fixes just needs to be checked

--- a/tex/main.bib
+++ b/tex/main.bib
@@ -121,6 +121,12 @@
   url             = {https://www.infoq.com/presentations/Null-References-The-Billion-Dollar-Mistake-Tony-Hoare/},
 }
 
+@misc{java:privilege,
+	author = {Oracle},
+	title = {PrivilegedAction},
+	url = {https://docs.oracle.com/javase/7/docs/api/java/security/PrivilegedAction.html},
+}
+
 @misc{mechpen:misundestand,
   author       = {Mechpen},
   title        = {Mis-Understanding {R}ust lifetime},
@@ -141,6 +147,22 @@
   url           = {https://cwe.mitre.org/data/definitions/476.html},
 }
 
+@misc{python:privilege,
+	author = {Python Security},
+	title = {Python Security Model},
+	url = {https://python-security.readthedocs.io/security.html#python-security-model},
+}
+
+@misc{redox,
+	title = {Redox},
+	url = {https://www.redox-os.org/},
+}
+
+@misc{rust:auth,
+	author = {docs.rs},
+	title = {Crate OSO},
+	url = {https://docs.rs/oso/0.7.0/oso/},
+}
 
 @misc{rust:language,
 	author	        = {Steve Klabnik and Carol  Nichols},
@@ -174,6 +196,12 @@
 	year          = {2020},
 	url	      = {https://doc.rust-lang.org/nightly/unstable-book/compiler-flags.html},
 	key           = {The Rust Unstable Book},
+}
+
+@misc{rust:syntax,
+	author 	= {rust-lang},
+	title 	= {parser-lalr.y},
+	url 	= {https://github.com/rust-lang/rust/blob/5b13bff5203c1bdc6ac6dc87f69b5359a9503078/src/grammar/parser-lalr.y#L1309-L1573},
 }
 
 @misc{pypl:index,
